Bug 36810 - tryLayoutDoingPositionedMovementOnly does not have to be in RenderObject or be virtual
Summary: tryLayoutDoingPositionedMovementOnly does not have to be in RenderObject or b...
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Benjamin Poulain
URL:
Keywords:
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-03-30 01:18 PDT by Benjamin Poulain
Modified: 2010-04-06 02:21 PDT (History)
2 users (show)

See Also:


Attachments
Move the function to RenderBox (2.27 KB, patch)
2010-03-30 01:20 PDT, Benjamin Poulain
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Poulain 2010-03-30 01:18:31 PDT
As far as I know, this method only makes sense for RenderBoxes. It could be implemented there directly.
That could clean the code of RenderObject a bit, and avoid a useless virtual function call in the layout path.
Comment 1 Benjamin Poulain 2010-03-30 01:20:58 PDT
Created attachment 52011 [details]
Move the function to RenderBox
Comment 2 WebKit Commit Bot 2010-03-31 02:50:08 PDT
Comment on attachment 52011 [details]
Move the function to RenderBox

Clearing flags on attachment: 52011

Committed r56831: <http://trac.webkit.org/changeset/56831>
Comment 3 WebKit Commit Bot 2010-03-31 02:50:13 PDT
All reviewed patches have been landed.  Closing bug.
Comment 4 Simon Hausmann 2010-04-06 02:21:03 PDT
Revision r56831 cherry-picked into qtwebkit-2.0 with commit 634142ce553d451158968753b31cd1364b1472dd