2010-03-31  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Darin Adler.

        tryLayoutDoingPositionedMovementOnly does not have to be in RenderObject or be virtual
        https://bugs.webkit.org/show_bug.cgi?id=36810

        Move tryLayoutDoingPositionedMovementOnly as a regular method of RenderBox

        * rendering/RenderBox.h:
        (WebCore::RenderBox::tryLayoutDoingPositionedMovementOnly):
        * rendering/RenderObject.h:

Canonical link: https://commits.webkit.org/48124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56831 268f45cc-cd09-0410-ab3c-d52691b4dbfc